--- a/Views/dangki.html
+++ b/Views/dangki.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng Ký</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style1.css">
 </head>
 <body>
     <div class="container">
@@ -18,6 +18,9 @@
             
             <label for="password">Mật khẩu:</label>
             <input type="password" id="password" name="password" required>
+
+            <label for="password">Nhập lại mật khẩu:</label>
+            <input type="password" id="password" name="password" required>
             
             <label for="confirm-password">Xác minh:</label>
             <input type="password" id="confirm-password" name="confirm-password" required>
@@ -30,7 +33,7 @@
             <button type="submit">Tạo tài khoản</button>
         </form>
         <div class="image-section">
-            <img src="thang.jpg" alt="Cute monster with popcorn and drink">
+            <img src="image/logo.png" alt="Cute monster with popcorn and drink">
         </div>
     </div>
 </body>
