--- a/Views/login.html
+++ b/Views/login.html
@@ -17,7 +17,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required>
 
-            <button type="submit">Login</button>
+            <button type="submit" ><a href="bicinema.html">Login</a></button>
             <div class="dangky">
                 <p4>Không có tài khoản ?</p4>
                 <a href="dangki.html"> Đăng ký tại đây</a>
