--- a/Views/flimdangchieu.html
+++ b/Views/flimdangchieu.html
@@ -55,7 +55,7 @@
 
         <script>
             document.addEventListener("DOMContentLoaded", function () {
-                fetch("http://localhost:3000/films")
+                fetch("http://localhost:3000/movies")
                     .then(response => {
                         if (!response.ok) {
                             throw new Error("Không thể tải dữ liệu từ API.");
